[package]
name = "sentinel-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
indicatif = "0.18.4"
ipnet = "2.12.0"
quick-xml = { version = "0.40.1", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = "0.26"
rustls-pki-types = "1.0"
webpki-roots = "0.26"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
libc = "0.2.186"
